<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".presentation.GameFinishedFragment">

    <ImageView
        android:id="@+id/iv_reaction"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/sad_face"
        app:layout_constraintBottom_toTopOf="@+id/tv_min_correct_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_min_correct_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/required_amount_cor_answers"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_score"
        app:layout_constraintTop_toBottomOf="@+id/iv_reaction" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_score"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_min_percent"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_correct_answers" />

    <TextView
        android:id="@+id/tv_min_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/required_percent_of_correct_answers"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_percent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score" />

    <TextView
        android:id="@+id/tv_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_percent_of_correct_answers"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_percent" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>